--- a/page.html
+++ b/page.html
@@ -26,7 +26,7 @@
     <script>
         async function fetchData() {
             try {
-                const response = await fetch('http://127.0.0.1:5000/data');
+                const response = await fetch('https://amanadarsh.pythonanywhere.com/data');
                 const data = await response.json();
                 return data;
             } catch (error) {
